Changes for 2.2.11rc1

New features:
A.F....... [ZBX-1357] updated Czech and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-9430] fixed Windows eventlog item incorrectly interpreting 0x00000103 return value as an error (wiper)
.......PS. [ZBX-9655] fixed crash if MYSQL connection object initialization failed (wiper)
........S. [ZBX-9667] fixed disabled triggers or trigers having disabled hosts or items affecting trigger dependency calculations (wiper)
A......... [ZBX-9738] fixed deletion of related action operations when deleting a host group (Gunars)
.......PS. [ZBX-9668] improved handling of VMware performance counter instances without data (wiper)
........S. [ZBX-9677] fixed compilation warnings in the escalator.c module (igors)
...G...PS. [ZBX-9682] fixed parsing of the numeric item key parameters (igors)
..F....... [ZBX-9639] fixed chart width validation (Gunars)
..F....... [ZBX-9809] fixed action operation validation (Gunars)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
.......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)

--------------------------------------------------------------------------------
Changes for 2.2.10

2.2.10rc2 was released as 2.2.10 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.10rc2

New features:
A.F....... [ZBX-1357] updated Japanese translation; thanks to Zabbix translators (Richlv)

Bug fixes: