@@ -150,7 +150,7 @@ int	VFS_FS_SIZE(AGENT_REQUEST *request, AGENT_RESULT *result)
 	else
 		ret = SYSINFO_RET_FAIL;
 
-	return SYSINFO_RET_FAIL;
+	return ret;
 }
 
 int	VFS_FS_DISCOVERY(AGENT_REQUEST *request, AGENT_RESULT *result)
